--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 0
+  port: 8080
 
 spring:
   application:
@@ -15,3 +15,13 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka # eureka 서버에 등록
+
+springdoc:
+  api-docs:
+    version: openapi_3_1
+    enabled: true
+    path: /members/v3/api-docs
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+
+
